# D0037D-Lab5

./: CMakeLists.txt  Circle.cpp  Circle.h  Point2D.cpp  Point2D.h  README.md  Rectangle.cpp  Rectangle.h  Rgba.cpp  Rgba.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  task1.cpp  task2.cpp
vs2019/: D0037D-Lab5.sln  task1.vcxproj  task1.vcxproj.filters  task2.vcxproj  task2.vcxproj.filters
